Add changes to GenerateAuthors and handlebars

--- a/index.html
+++ b/index.html
@@ -160,27 +160,28 @@
                 <aside class="sidebar">
                     <h2 class="section-title">Tags</h2>
                     <ul class="list tags">
+
                     </ul>
                     <h2 class="section-title">Authors</h2>
                     <ul class="list authors">
                         <li>
                             <a href="#">
-                            <span class="author-name">Kitty Toebean</span>
+                            <span class="author-name" data-author="Kitty Toeban"></span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                            <span class="author-name">Theo Tabby</span>
+                            <span class="author-name" data-author="Theo Tabby"></span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                            <span class="author-name">George Tuxedo</span>
+                            <span class="author-name" data-author="George Tuxedo"></span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                            <span class="author-name">Marion Berry</span>
+                            <span class="author-name" data-author="Marion Berry"></span>
                             </a>
                         </li>
                     </ul>
